--- a/views/home.html
+++ b/views/home.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
 	<head>
-
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	</head>
-	<body>
-		<p>Home page</p>
+	<body class="container h-100">
+		<div id="row h-100 justify-content-center align-items-center">
+			<div class="col-lg-6 offset-lg-3 col-md-6 offset-md-3 col-sm-6 offset-sm-3">
+				<form onsubmit="return submitForm();">
+				  <div class="form-group">
+				    <label for="phone">SNS Endpoint (Phone #)</label>
+				    <input type="text" class="form-control" id="phone" placeholder="1112223333">
+				  </div>
+				  <div class="form-group">
+				    <label for="message">Message</label>
+	  				<textarea class="form-control" id="message" rows="3" placeholder="Enter message"></textarea>
+				  </div>
+				  <button type="submit" class="btn btn-primary">Submit</button>
+				</form>
+				<p class="text-success" id="messageStatus"></p>
+				<p class="text-danger" id="error"></p>
+				<p class="font-weight-bold text-info" id="messageId"></p>
+			</div>
+		</div>
+		<!-- Scripts -->
+		<script type="text/javascript" src="javascripts/home.js"></script>
 	</body>
 </html>
