--- a/views/home.html
+++ b/views/home.html
@@ -15,6 +15,10 @@
 				    <label for="message">Message</label>
 	  				<textarea class="form-control" id="message" rows="3" placeholder="Enter message"></textarea>
 				  </div>
+				  <div class="form-group">
+					  <label for="date" class="col-form-label">Date and time</label>
+					  <input class="form-control" type="datetime-local" value="0000-00-00T00:00" id="date">
+					</div>
 				  <button type="submit" class="btn btn-primary">Submit</button>
 				</form>
 				<p class="text-success" id="messageStatus"></p>
