--- a/views/home.html
+++ b/views/home.html
@@ -9,11 +9,11 @@
 				<form onsubmit="return submitForm();">
 				  <div class="form-group">
 				    <label for="phone">SNS Endpoint (Phone #)</label>
-				    <input type="text" class="form-control" id="phone" placeholder="1112223333">
+				    <input type="tel" required="true" class="form-control" id="phone" placeholder="1112223333">
 				  </div>
 				  <div class="form-group">
 				    <label for="message">Message</label>
-	  				<textarea class="form-control" id="message" rows="3" placeholder="Enter message"></textarea>
+	  				<textarea class="form-control" id="message" required="true" rows="3" placeholder="Enter message"></textarea>
 				  </div>
 				  <div class="form-group">
 					  <label for="date" class="col-form-label">Date and time</label>
