configured for aws production release
refactored a lot of code to make ready for aws elastic beanstalk
deployment

--- a/views/home.html
+++ b/views/home.html
@@ -18,6 +18,7 @@
 				  <div class="form-group">
 					  <label for="date" class="col-form-label">Date and time</label>
 					  <input class="form-control" type="datetime-local" value="0000-00-00T00:00" id="date">
+					  <small id="dateHelp" class="form-text text-muted">If you wish to send a push notification immediately, leave this field blank. Otherwise enter a date in the form of yyyy-mm-dd hh:mm am/pm.</small>
 					</div>
 				  <button type="submit" class="btn btn-primary">Submit</button>
 				</form>
